eslint_refactor_v1_and_selectors

--- a/src/modules/UserTodos/UsersTodos.module.css
+++ b/src/modules/UserTodos/UsersTodos.module.css
@@ -1,15 +1,15 @@
 .completedListItem {
   background-color: lightgreen;
-};
+}
 
 .notCompletedListItem {
   background-color: lightsalmon;
-};
+}
 
 .btnMargin {
   margin: 10px;
-};
+}
 
 .pointer {
   cursor: pointer;
-};
+}
