--- a/src/modules/UsersTable/UsersTable.module.css
+++ b/src/modules/UsersTable/UsersTable.module.css
@@ -5,3 +5,14 @@
 .center {
   text-align: center;
 }
+
+.table {
+  width: 100%;
+  table-layout: fixed;
+}
+
+.tableScroll {
+  border: 2px solid red;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
