--- a/src/modules/UsersTable/UsersTable.module.css
+++ b/src/modules/UsersTable/UsersTable.module.css
@@ -9,12 +9,14 @@
 .tableUsers {
   table-layout: fixed;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .tableUsers, 
 .tdUsers {
   border-collapse: collapse;
-  /* border: 1px solid #000; */
 }
 
 .tdUsers {
